name:          s3-utils
version:       0.1.0
synopsis:      core-utils for an S3 instance
description:   core-utils for an S3 instance
license:       GPL
author:        Patrick Brisbin
maintainer:    Patrick Brisbin <me@pbrisbin.com>
build-type:    Simple
cabal-version: >=1.6

library
  build-depends:   base, containers, directory, filepath, bytestring, hS3
  ghc-options:     -static -Wall
  exposed-modules: Network.AWS.Utils

executable s3cp
  build-depends: base, containers, directory, filepath, bytestring, hS3
  ghc-options:   -static -Wall
  main-is:       s3cp.hs

executable s3mv
  build-depends: base, containers, directory, filepath, bytestring, hS3
  ghc-options:   -static -Wall
  main-is:       s3mv.hs

executable s3ls
  build-depends: base, containers, directory, filepath, bytestring, hS3
  ghc-options:   -static -Wall
  main-is:       s3ls.hs

executable s3rm
  build-depends: base, containers, directory, filepath, bytestring, hS3
  ghc-options:   -static -Wall
  main-is:       s3rm.hs

source-repository head
  type:     git
  location: git://github.com/pbrisbin/s3-utils.git
